--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>NS Recruiter</title>
   </head>
   <body>
-
+    <p id="nation-name"></p>
+    <progress id="progress-bar" value="0" max="180">0%</progress>
+    <button type="button" id="recruit-new">Recruit New Nations</button>
   </body>
+  <script type="text/javascript">
+      require('./index.js')
+  </script>
 </html>
